--- a/student-management-frontend/src/app/student-data-module/components/data-grid/data-grid.component.html
+++ b/student-management-frontend/src/app/student-data-module/components/data-grid/data-grid.component.html
@@ -1,4 +1,4 @@
-<kendo-grid (cellClick)="editHandler($event)" [data]="view" (add)="addHandler($event)">
+<!-- <kendo-grid [data]="view" (add)="addHandler($event)">
   <ng-template kendoGridToolbarTemplate>
     <button kendoGridAddCommand *ngIf="!isInEditingMode">Add new</button>
     <div *ngIf="isInEditingMode">
@@ -14,4 +14,51 @@
   <kendo-grid-column field="name" editor="numeric" title="Name"></kendo-grid-column>
   <kendo-grid-column field="gender" editor="text" title="Gender"></kendo-grid-column>
   <kendo-grid-column field="address" editor="text" title="Address"></kendo-grid-column>
-</kendo-grid>
+</kendo-grid> -->
+
+
+
+
+
+
+<table>
+  <thead>
+    <tr>
+      <th scope="col">Id</th>
+      <th scope="col">Name</th>
+      <th scope="col">Mobile</th>
+      <th scope="col">DOB</th>
+      <th scope="col">Age</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let data of allStudents">
+      <td>{{data.id}}</td>
+      <td>{{data.name}}</td>
+      <td>{{data.mobile}}</td>
+      <td>{{data.dob}}</td>
+      <td>{{data.age}}</td>
+    </tr>
+  </tbody>
+</table>
+
+
+
+
+<!-- <kendo-grid (cellClick)="editHandler($event)" [data]="view" (add)="addHandler($event)">
+  <ng-template kendoGridToolbarTemplate>
+    <button kendoGridAddCommand *ngIf="!isInEditingMode">Add new</button>
+    <div *ngIf="isInEditingMode">
+      <button kendoButton [disabled]="!formGroup.valid" (click)="saveCurrent()">
+        Save
+      </button>
+      <button kendoButton themeColor="primary" (click)="cancelHandler()">
+        Cancel
+      </button>
+    </div>
+  </ng-template>
+  <kendo-grid-column field="id" title="ID"></kendo-grid-column>
+  <kendo-grid-column field="name" editor="numeric" title="Name"></kendo-grid-column>
+  <kendo-grid-column field="gender" editor="text" title="Gender"></kendo-grid-column>
+  <kendo-grid-column field="address" editor="text" title="Address"></kendo-grid-column>
+</kendo-grid> -->
