initial add record done

--- a/student-management-frontend/src/app/student-data-module/components/data-grid/data-grid.component.html
+++ b/student-management-frontend/src/app/student-data-module/components/data-grid/data-grid.component.html
@@ -6,7 +6,9 @@
     <!-- <button kendoGridAddCommand >Add new</button> -->
 
     <div>
-      <button kendoButton [disabled]="!formGroup.valid" (click)="saveCurrent()">
+      <!-- <button kendoButton [disabled]="!formGroup.valid" (click)="saveCurrent()"> -->
+
+      <button kendoButton (click)="saveCurrent()">
         Save
       </button>
       <button kendoButton themeColor="primary" (click)="cancelHandler()">
@@ -20,7 +22,7 @@
   <kendo-grid-column field="address" editor="text" title="Address"></kendo-grid-column>
   <kendo-grid-column field="mobile" editor="text" title="Mobile No"></kendo-grid-column>
   <kendo-grid-column field="dob" editor="date" title="Date of Birth"></kendo-grid-column>
-  <kendo-grid-column field="age" editor="text" title="Age" ></kendo-grid-column>
+  <kendo-grid-column field="age" editor="text" title="Age"></kendo-grid-column>
   <kendo-grid-column title="Command">
     <button kendoButton>
       Edit
