add students via form done

--- a/student-management-frontend/src/app/student-data-module/components/data-grid/data-grid.component.html
+++ b/student-management-frontend/src/app/student-data-module/components/data-grid/data-grid.component.html
@@ -6,10 +6,10 @@
     <!-- <button kendoGridAddCommand >Add new</button> -->
 
     <div>
-      <!-- <button kendoButton [disabled]="!formGroup.valid" (click)="saveCurrent()"> -->
+      <button kendoButton [disabled]="!formGroup.valid" (click)="saveCurrent()">
 
-      <button kendoButton (click)="saveCurrent()">
-        Save
+      <!-- <button kendoButton (click)="saveCurrent()">-->
+        Save 
       </button>
       <button kendoButton themeColor="primary" (click)="cancelHandler()">
         Cancel
