--- a/student-management-frontend/src/app/student-data-module/components/data-grid/data-grid.component.html
+++ b/student-management-frontend/src/app/student-data-module/components/data-grid/data-grid.component.html
@@ -1,3 +1,5 @@
+<p>Hello</p>
+<h4 *ngFor="let message of messages">{{message}}</h4>
 <kendo-grid [pageable]="true" [data]="allStudents" (add)="addHandler($event)" (edit)="editHandler($event)"
   (cancel)="canceledHandler($event)">
 
