file upload frontend added

--- a/student-management-frontend/src/app/student-data-module/components/file-upload/file-upload.component.html
+++ b/student-management-frontend/src/app/student-data-module/components/file-upload/file-upload.component.html
@@ -1,1 +1,32 @@
-<p>file-upload works!</p>
+<!-- <kendo-upload [saveUrl]="uploadSaveUrl" [removeUrl]="uploadRemoveUrl">
+</kendo-upload> -->
+
+<!-- <div class="text-center">
+    <input class="form-control" type="file" (change)="onChange($event)">
+
+    <button (click)="onUpload()" class="btn btn-success">
+        Upload
+    </button>
+</div>
+
+<div class="container" *ngIf="loading">
+    <h3>Loading ...</h3>
+</div> -->
+
+<div>
+    <div>
+        <div>
+            <form [formGroup]="uploadForm" (ngSubmit)="submit()">
+
+                <div class="form-group">
+                    <label for="file">Select the file</label>
+                    <input formControlName="file" id="csv" type="file" class="form-control"
+                        (change)="onFileChange($event)" multiple>
+                </div>
+
+                <button type="submit">Upload</button>
+            </form>
+
+        </div>
+    </div>
+</div>
