--- a/student-management-frontend/src/app/student-data-module/components/data-grid/data-grid.component.html
+++ b/student-management-frontend/src/app/student-data-module/components/data-grid/data-grid.component.html
@@ -1,12 +1,9 @@
-<h4 *ngFor="let message of messages">{{message}}</h4>
-
-<kendo-grid [pageable]="true" [data]="allStudents" (add)="addHandler($event)" (edit)="editHandler($event)"
-  (cancel)="canceledHandler($event)">
+<kendo-grid [pageable]="true" (pageChange)="pageChange($event)" [data]="allStudents" (add)="addHandler($event)"
+  (edit)="editHandler($event)" (cancel)="canceledHandler($event)">
 
   <ng-template kendoGridToolbarTemplate>
-    <button kendoGridAddCommand *ngIf="!isInEditingMode">Add new</button>
+    <button kendoGridAddCommand class="btnAdd" *ngIf="!isInEditingMode">Add new</button>
   </ng-template>
-
 
   <kendo-grid-column field="id" title="ID"></kendo-grid-column>
   <kendo-grid-column field="name" editor="text" title="Name"></kendo-grid-column>
@@ -18,72 +15,19 @@
   <kendo-grid-column title="Command">
 
     <ng-template kendoGridCellTemplate let-isNew="isNew" let-dataItem>
-      <button kendoGridEditCommand (click)="editHandler($event)">Edit</button>
-      <!-- <button kendoGridEditCommand>Edit</button> -->
+      <button kendoGridEditCommand class="btnEdit" (click)="editHandler($event)">Edit</button>
       <div *ngIf="isNew">
         <button kendoGridSaveCommand (click)="saveCurrent()" [disabled]="formGroup?.invalid">Add</button>
       </div>
       <div *ngIf="!isNew">
         <button kendoGridSaveCommand (click)="updateStudent(dataItem)" [disabled]="formGroup?.invalid">Update</button>
-
       </div>
-      <!-- <button kendoGridSaveCommand (click)="saveCurrent()" [disabled]="formGroup?.invalid">
-        {{ isNew ? "Add" : "Update" }}
-      </button> -->
       <button kendoGridCancelCommand (click)="cancelHandler()">
         {{ isNew ? "Discard changes" : "Cancel" }}
       </button>
-      <button kendoGridRemoveCommand (click)="removeStudent(dataItem)">Remove</button>
-      <!-- <button kendoGridSaveCommand (click)="saveCurrent()">Add</button> -->
-      <!-- <button kendoGridCancelCommand (click)="cancelHandler()">Discard changes</button> -->
+      <button class="btnRemove" kendoGridRemoveCommand (click)="removeStudent(dataItem)">Remove</button>
     </ng-template>
 
   </kendo-grid-column>
 
 </kendo-grid>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- <kendo-grid (cellClick)="editHandler($event)" [data]="view" (add)="addHandler($event)">
-  <ng-template kendoGridToolbarTemplate>
-    <button kendoGridAddCommand *ngIf="!isInEditingMode">Add new</button>
-    <div *ngIf="isInEditingMode">
-      <button kendoButton [disabled]="!formGroup.valid" (click)="saveCurrent()">
-        Save
-      </button>
-      <button kendoButton themeColor="primary" (click)="cancelHandler()">
-        Cancel
-      </button>
-    </div>
-  </ng-template>
-  <kendo-grid-column field="id" title="ID"></kendo-grid-column>
-  <kendo-grid-column field="name" editor="numeric" title="Name"></kendo-grid-column>
-  <kendo-grid-column field="gender" editor="text" title="Gender"></kendo-grid-column>
-  <kendo-grid-column field="address" editor="text" title="Address"></kendo-grid-column>
-</kendo-grid> -->
-
-
-<!-- <tr *ngFor="let student of students | async"> -->
-
-<!-- <td>{{student.id}}</td>
-      <td>{{student.name}}</td>
-      <td>{{student.mobile}}</td>
-      <td>{{student.dob}}</td>
-      <td>{{student.age}}</td> -->
